Added some JS elements.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div id="text-container">
                 <p class="tagline">
                     His amazing work</p>
-                <h1 id="main heading">
+                <h1 id="main-heading">
                     Juan's Photography</h1>
                     <p class="tagline">
                         Just Exceptional</p>
