--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         <div id="container">
             <div id="text-container">
                 <p class="tagline">
-                    His amazing work</p>
+                    Our amazing works</p>
                 <h1 id="main-heading">
                     Juan's Photography</h1>
                     <p class="tagline">
-                        Just Exceptional</p>
+                        Just Exceptional!</p>
             </div>
             <div id="image-container">
                 <img src="" class="slides slide-animation" alt="">
